fixes some typos and grammatical errors

--- a/docs/source/algorithms/moo/kgb.ipynb
+++ b/docs/source/algorithms/moo/kgb.ipynb
@@ -77,7 +77,7 @@
     "- **perc_diversity (float, optional):** Proportion of the population allocated for introducing diversity. \n",
     "- **c_size (int, optional):** Cluster size.\n",
     "- **eps (float, optional):** Threshold for detecting changes. Default: \n",
-    "- **pertub_dev (float, optional):** Deviation for perturbation in diversity introduction. "
+    "- **perturb_dev (float, optional):** Deviation for perturbation in diversity introduction. "
    ]
   },
   {
