--- a/docs/source/mcdm/index.ipynb
+++ b/docs/source/mcdm/index.ipynb
@@ -138,7 +138,7 @@
     "plot.add(F, color=\"blue\", alpha=0.2, s=10)\n",
     "plot.add(F[I], color=\"red\", s=30)\n",
     "plot.do()\n",
-    "plot.apply(lambda ax: ax.arrow(0, 0, 0.5, 0.5, color='black', \n",
+    "plot.apply(lambda ax: ax.arrow(0, 0, *weights, color='black', \n",
     "                               head_width=0.01, head_length=0.01, alpha=0.4))\n",
     "plot.show()"
    ]
