--- a/docs/source/getting_started/part_2.ipynb
+++ b/docs/source/getting_started/part_2.ipynb
@@ -79,7 +79,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Thus, we need to multiple an objective that is supposed to be maximized by $-1$ and minimize it. This results in minimizing $-f_2(x)$ instead of maximizing $f_2(x)$. \n",
+    "Thus, we need to multiply an objective that is supposed to be maximized by $-1$ and minimize it. This results in minimizing $-f_2(x)$ instead of maximizing $f_2(x)$. \n",
     "\n",
     "Moreover, the inequality constraints need to be formulated as **less than zero**  ($\\leq 0$) constraint. \n",
     "For this reason, $g_2(x)$ is multiplied by $-1$ in order to flip inequality relation. \n",
