--- a/docs/source/constraints/feas_first.ipynb
+++ b/docs/source/constraints/feas_first.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Feasbility First (Parameter-less Approach)"
+    "### Feasibility First (Parameter-less Approach)"
    ]
   },
   {
