--- a/docs/source/constraints/index.ipynb
+++ b/docs/source/constraints/index.ipynb
@@ -72,7 +72,7 @@
    "source": [
     "\\begin{align} \n",
     "\\begin{split}\n",
-    "\\max \\;\\; & f(x) = x_1^2 + x_2^2 \\\\[1mm]\n",
+    "\\min \\;\\; & f(x) = x_1^2 + x_2^2 \\\\[1mm]\n",
     "\\text{s.t.} \\;\\; & g(x) : x_1 + x_2 \\geq 1 \\\\[2mm]\n",
     "& 0 \\leq x_1 \\leq 2 \\\\\n",
     "& 0 \\leq x_2 \\leq 2 \n",
@@ -174,7 +174,7 @@
    "source": [
     "\\begin{align} \n",
     "\\begin{split}\n",
-    "\\max \\;\\; & f(x) = x_1^2 + x_2^2 \\\\[1mm]\n",
+    "\\min \\;\\; & f(x) = x_1^2 + x_2^2 \\\\[1mm]\n",
     "\\text{s.t.} \\;\\; & g(x) : x_1 + x_2 \\geq 1 \\\\[2mm]\n",
     "\\;\\; & h(x): 3 x_1 - x_2 = 0 \\\\[2mm]\n",
     "& 0 \\leq x_1 \\leq 2 \\\\\n",
@@ -230,7 +230,7 @@
     "plt.plot(X, 1-X, linewidth=2.0, color=\"green\", linestyle='dotted', label=\"g(x)\")\n",
     "plt.plot(X, 3*X, linewidth=2.0, color=\"blue\", linestyle='dotted', label=\"h(x)\")\n",
     "\n",
-    "plt.scatter([0.25], [0.75], marker=\"*\", color=\"red\", s=200, label=\"Optimum (0.5, 0.5)\")\n",
+    "plt.scatter([0.25], [0.75], marker=\"*\", color=\"red\", s=200, label=\"Optimum (0.25, 0.75)\")\n",
     "\n",
     "plt.xlim(0, 2)\n",
     "plt.ylim(0, 2)\n",
@@ -275,6 +275,11 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -284,7 +289,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
