Improve documentation organization and build system
- Enhanced documentation build scripts with better error handling
- Reorganized algorithm and operator documentation structure
- Updated gitignore to exclude compiled artifacts
- Added new references and improved formatting consistency

--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -45,6 +45,16 @@ keywords = {Evolutionary computations, Evolutionary multiple objective optimisat
 
 @ARTICLE{rvea,  author={Cheng, Ran and Jin, Yaochu and Olhofer, Markus and Sendhoff, Bernhard},  journal={IEEE Transactions on Evolutionary Computation},   title={A Reference Vector Guided Evolutionary Algorithm for Many-Objective Optimization},   year={2016},  volume={20},  number={5},  pages={773-791},  doi={10.1109/TEVC.2016.2519378}}
 
+@article{Sowmya2024,
+  title={Newton-Raphson-based optimizer: A new population-based metaheuristic algorithm for continuous optimization problems},
+  author={Sowmya, R. and Premkumar, M. and Jangir, P.},
+  journal={Engineering Applications of Artificial Intelligence},
+  volume={128},
+  pages={107532},
+  year={2024},
+  publisher={Elsevier},
+  doi={10.1016/j.engappai.2023.107532}
+}
 
 
 @ARTICLE{pymoo,
