Add documentation for CMPOSO and MOPSO-CD algorithms
- Add detailed documentation pages for CMOPSO and MOPSO-CD algorithms
- Include working examples, customization options, and API documentation
- Add algorithms to portfolio.html with new flag indicators
- Update algorithms.csv index with proper categorization
- Add CMOPSO reference to bibliography
- Include implementation credits to Gideon Oludeyi
- Add algorithms to toctree for proper documentation structure

--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -794,3 +794,14 @@ doi={10.1109/TSMCC.2004.841906}}
   year={2010},
   publisher={IEEE}
 }
+
+@article{cmopso,
+  title={A competitive mechanism based multi-objective particle swarm optimizer with fast convergence},
+  author={Zhang, Xinye and Zheng, Xiaolong and Cheng, Ran and Qiu, Jing and Jin, Yaochu},
+  journal={Information Sciences},
+  volume={427},
+  pages={63--76},
+  year={2018},
+  publisher={Elsevier},
+  doi={10.1016/j.ins.2017.10.037}
+}
